--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,3 +1,4 @@
 #summary Changes done sorted descending on date
 
 ===2012.06.06===
+Added implementation of MSM5205 sound driver, so Moon Patrol and Lode Runner drivers now have sound
