--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,4 +1,6 @@
 #summary Changes done sorted descending on date
 
 ===2012.06.06===
-Added implementation of MSM5205 sound driver, so Moon Patrol and Lode Runner drivers now have sound
+  * Added implementation of MSM5205 sound driver, so Moon Patrol and Lode Runner drivers now have sound.
+  * Fixed some bugs in tilemap.cs, but there is still many to be found.
+  * Added new driver_xaine, but it doesn't work yet
