--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -2,5 +2,6 @@
 
 ===2012.06.06===
   * Added implementation of MSM5205 sound driver, so Moon Patrol and Lode Runner drivers now have sound.
+  * Fixed a bug in init_palette in Moon Patrol, graphics now look ok.
   * Fixed some bugs in tilemap.cs, but there is still many to be found.
   * Added new driver_xaine, but it doesn't work yet
