--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -1,5 +1,8 @@
 #summary Changes done sorted descending on date
 
+===2012.07.18===
+Bughunt successful. Added drivers for bublbobl (sound incorrect though),rygar,silkworm,gemini,gyrodine,block.
+
 ===2012.06.17===
 More refactoring, found bug in tilemap so now pang etc. now displays 
 correct graphics. Also added new drivers for dkongjr,dkong3,ddragonb,ddragon2,retofinv,vigilant,pang,spang,gng,diamond.
